(new) Добавит webpack сборку
Что позволит выложить правильно пакет на unpkg.com

--- a/examples/Button/index.html
+++ b/examples/Button/index.html
@@ -13,8 +13,11 @@
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <!-- Babel Core -->
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-    <script src="../../dist/index.cdn.js"></script>
+    <script crossorigin src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <!-- Bemponent -->
+    <script crossorigin src="https://unpkg.com/bemponent@0.1.10-beta6/dist/bemponent.js"></script>
+    <!-- <script src="../../dist/bemponent.js"></script> -->
+
     <script type="text/babel" src="index.js"></script>
 </body>
 </html>
