--- a/examples/Button/index.html
+++ b/examples/Button/index.html
@@ -15,8 +15,8 @@
     <!-- Babel Core -->
     <script crossorigin src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <!-- Bemponent -->
-    <script crossorigin src="https://unpkg.com/bemponent@0.1.10-beta6/dist/bemponent.js"></script>
-    <!-- <script src="../../dist/bemponent.js"></script> -->
+    <!-- <script crossorigin src="https://unpkg.com/bemponent@0.1.8-beta10/dist/bemponent.js"></script> -->
+    <script src="../../dist/bemponent.js"></script>
 
     <script type="text/babel" src="index.js"></script>
 </body>
